--- a/Office/OfficeExperts/expertstoc/toc.yml
+++ b/Office/OfficeExperts/expertstoc/toc.yml
@@ -7,7 +7,7 @@
       href: ../activation/activate-office-2010-kms-host-via-phone-activation.md
     - name: Discover Office and Windows KMS hosts
       href: ../activation/discover-remove-unauthorized-office-windows-kms-hosts.md
-    - name: Reset Microsoft 365 Apps for enterprise activation state
+    - name: Reset activation state for Microsoft 365 Apps for enterprise
       href: ../activation/reset-office-365-proplus-activation-state.md
   - name: Administration
     items:
