--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,20 @@
 {
   "docsets_to_publish": [
     {
+      "docset_name": "OfficeDocs-Support-Archive",
+      "build_source_folder": "SupportArchive",
+      "build_output_subfolder": "OfficeDocs-Support-Archive",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "OfficeDocs-Support-Exchange",
       "build_source_folder": "Exchange",
       "build_output_subfolder": "OfficeDocs-Support-Exchange",
